# mosaic

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  binword_rec.c  game.c  game_aux.c  game_ext.c  game_ext.h  game_private.c  game_random.c  game_random.h  game_sdl.c  game_solve.c  game_struct.h  game_test_ahadjamar.c  game_test_ext.c  game_test_ikozak.c  game_test_nsemenov.c  game_text.c  game_tools.c  game_tools.h  model.c
latex/: files.tex  game_8h.tex  game_8h.tex.tmp  game_8h__dep__incl.dot  game_8h__incl.dot  game__aux_8h.tex  game__aux_8h__incl.dot  game__ext_8c.tex  game__ext_8c.tex.tmp  game__ext_8c__incl.dot  game__ext_8h.tex  game__ext_8h.tex.tmp  game__ext_8h__incl.dot  queue_8h.tex  refman.tex
make-game-web/: demo.js  game.css  game.html  game.js  game.wasm  wrapper.c
make-game-web/src/: game_tools.c  game_tools.h
